Safer type conversion